Font align in FireFox fixed

--- a/src/assets/styles/partials/_app.scss
+++ b/src/assets/styles/partials/_app.scss
@@ -4,6 +4,7 @@
 }
 body, html {
     margin: 0;
+    padding: 0;
 }
 .home {
     position: relative;
@@ -18,6 +19,7 @@ body, html {
 .contacts {
     min-width: 80%;
     position: absolute;
+    text-align: center; 
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -61,6 +63,7 @@ body, html {
 }
 .person-image {
     position: relative;
+    text-align: center;
     box-shadow: inset 10px 10px 10px 0 rgba(0, 0, 0, 0.04);
     border: solid 7px $white; 
     min-height: 100px;
